# cddlib

./: .gitignore  Makefile.in  configure  configure.ac  libtool  make_all_f.sh
doc/: .gitignore  cddlibman.tex
lib-src/: Makefile.am  Makefile.in  cdd.h  cddcore.c  cddcore.lo  cddio.c  cddio.lo  cddlib.c  cddlib.lo  cddlp.c  cddlp.lo  cddmp.c  cddmp.h  cddmp.lo  cddproj.c  cddproj.lo  cddstd.c  cddstd.h  cddtypes.h  libcdd.la  setoper.c  setoper.h  setoper.lo
lib-src-gmp/: Makefile.am  Makefile.in  cdd_f.h  cddcore_f.c  cddio_f.c  cddlib_f.c  cddlp_f.c  cddmp_f.c  cddmp_f.h  cddproj_f.c  cddstd.c  cddstd.h  cddstd_f.c  cddstd_f.h  cddtypes_f.h
lib-src/.deps/: cddcore.Plo  cddio.Plo  cddlib.Plo  cddlp.Plo  cddmp.Plo  cddproj.Plo  setoper.Plo
lib-src/.libs/: libcdd.lai  libcdd.so.0.0.0
src/: Makefile.am  Makefile.in  allfaces.c  fourier.c  projection.c
src-gmp/: Makefile.in
